<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. Property of Dennis Kwabena Bilson. No unauthorized duplication of this material should be made without prior permission from the developer
  -->

<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/flipper_success"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="io.pergasus.ui.SuccessActivity">
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:elevation="@dimen/z_card"
		android:paddingEnd="@dimen/padding_normal"
		android:paddingStart="@dimen/padding_normal">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:gravity="center"
			android:orientation="vertical">
			
			<TextView
				style="@style/TextAppearance.ItemDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/success_header"
				android:textColor="@color/text_primary_dark"
				android:textSize="30sp" />
			
			<TextView
				style="@style/TextAppearance.ItemDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/success_message"
				android:textColor="@color/text_secondary_dark" />
		
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="horizontal"
			android:padding="@dimen/spacing_normal"
			android:layout_marginBottom="@dimen/padding_normal"
			android:weightSum="2">
			
			<TextView
				android:id="@+id/text_track_order"
				style="@style/TextAppearance.ItemDescription"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawablePadding="@dimen/padding_normal"
				android:drawableStart="@drawable/ic_track_order"
				android:text="@string/title_activity_tracking"
				android:visibility="gone"
				android:textColor="@color/designer_news" />
			
			<TextView
				android:id="@+id/text_shop_more"
				style="@style/TextAppearance.ItemDescription"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="end"
				android:drawablePadding="@dimen/padding_normal"
				android:drawableEnd="@drawable/ic_basket"
				android:text="@string/shop_more"
				android:textColor="@color/accent" />
		
		</LinearLayout>
	
	</RelativeLayout>
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:elevation="@dimen/z_card"
		android:paddingEnd="@dimen/padding_normal"
		android:paddingStart="@dimen/padding_normal">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:gravity="center"
			android:orientation="vertical">
			
			<TextView
				style="@style/TextAppearance.ItemDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/success_failed_header"
				android:textColor="@color/text_primary_dark"
				android:textSize="30sp" />
			
			<TextView
				style="@style/TextAppearance.ItemDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/success_failed_message"
				android:textColor="@color/text_secondary_dark" />
		
		</LinearLayout>
		
		<TextView
			android:id="@+id/text_try_again"
			style="@style/TextAppearance.ItemDescription"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentEnd="true"
			android:drawablePadding="@dimen/padding_normal"
			android:drawableStart="@drawable/ic_retry"
			android:padding="15dp"
			android:text="@string/try_again"
			android:textColor="@color/error" />
	
	</RelativeLayout>

</ViewFlipper>