<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. Property of Dennis Kwabena Bilson. No unauthorized duplication of this material should be made without prior permission from the developer
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/frame_login"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="io.pergasus.ui.AuthActivity">
	
	<LinearLayout
		android:id="@+id/container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="@dimen/spacing_xlarge"
		android:background="@drawable/dialog_background"
		android:elevation="@dimen/z_fab"
		android:nestedScrollingEnabled="true"
		android:orientation="vertical"
		android:padding="@dimen/spacing_large"
		android:transitionName="@string/transition_dribbble_login"
		tools:ignore="UselessParent">
		
		<io.pergasus.ui.widget.BaselineGridTextView
			android:id="@+id/login_message"
			style="@style/TextAppearance.DialogContent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="@dimen/spacing_normal"
			android:gravity="center"
			android:text="@string/need_login"
			android:textColor="@color/text_secondary_dark"
			app:fontFamily="@font/nunito_semibold" />
		
		<Button
			android:id="@+id/login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:padding="@dimen/padding_normal"
			android:layout_marginBottom="@dimen/spacing_micro"
			android:text="@string/login_to"
			android:textAppearance="@style/TextAppearance.DarkButton" />
		
		<TextView
			android:id="@+id/login_failed_message"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/login_failed"
			android:textColor="@color/error"
			android:visibility="gone" />
		
		<include
			layout="@layout/loading"
			android:visibility="gone" />
	
	</LinearLayout>

</FrameLayout>